--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
-        <h1>Pokémon Search</h1>
-        <input type="text" id="searchInput" placeholder="Enter Pokémon name..." />
-        <button onclick="searchPokemon()">Search</button>
+        <header>
+            <img src="./assets/3.svg" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+            <main class="content">
+                <h1>Pokémon Search</h1>
+                <input type="text" id="searchInput" placeholder="Enter Pokémon name..." required />
+                <button onclick="searchPokemon()">Search</button>
 
-        <div id="pokemonDisplay" class="pokemon-card">
-            <h2 id="pokemonName"></h2>
-            <img id="pokemonImage" src="" alt="">
-            <p id="pokemonInfo"></p>
-        </div>
+                <div id="pokemonDisplay" class="pokemon-card">
+                    <h2 id="pokemonName"></h2>
+                    <img id="pokemonImage" src="" alt="">
+                    <p id="pokemonInfo"></p>
+                </div>
+            </main>
     </div>
-
     <script src="script.js"></script>
 </body>
+
 </html>
