--- a/Pokemon/Pokemonlist.html
+++ b/Pokemon/Pokemonlist.html
@@ -20,17 +20,14 @@
                 </ul>
             </nav>
         </header>
-            <main class="content">
-                <h1>Pokémon Search</h1>
-                <input type="text" id="searchInput" placeholder="Enter Pokémon name..." required />
-                <button onclick="searchPokemon()">Search</button>
+           <main class="pokemon-list">
+            <h1>Pokémon List</h1>
+            <div id="pokemonList" class="pokemon-grid">          
+                
+            </div>
+            <div id="loading">Loading...</div>
 
-                <div id="pokemonDisplay" class="pokemon-card">
-                    <h2 id="pokemonName"></h2>
-                    <img id="pokemonImage" src="" alt="">
-                    <p id="pokemonInfo"></p>
-                </div>
-            </main>
+           </main> 
     </div>
     <script src="script.js"></script>
 </body>
